# alura_python

./: README.md  pyproject.toml  ruff.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml
src/: app.py
src/bonus/: exe01.py  exe02.py  exe03.py
